@@ -27,6 +27,12 @@ import ai.floedb.floecat.catalog.rpc.SnapshotConstraints;
 import ai.floedb.floecat.common.rpc.ResourceId;
 import ai.floedb.floecat.connector.spi.FloecatConnector;
 import ai.floedb.floecat.connector.spi.FloecatConnector.SnapshotSelectionKind;
+import ai.floedb.floecat.schema.identity.ColumnPath;
+import ai.floedb.floecat.schema.identity.HistoryCoverage;
+import ai.floedb.floecat.schema.identity.IdentityMode;
+import ai.floedb.floecat.schema.identity.ResolvedSchema;
+import ai.floedb.floecat.schema.identity.SchemaIdentityReconciler;
+import ai.floedb.floecat.schema.identity.SchemaNode;
 import io.delta.kernel.Operation;
 import io.delta.kernel.ScanBuilder;
 import io.delta.kernel.Snapshot;
@@ -51,6 +57,7 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.OptionalInt;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
@@ -133,13 +140,17 @@ class DeltaConnectorTest {
   }
 
   @Test
-  void enumerateSnapshotsHonorsExplicitTargetVersions() {
-    Snapshot latest = snapshot(7L, 7000L);
-    Snapshot v3 = snapshot(3L, 3000L);
-    Snapshot v5 = snapshot(5L, 5000L);
-    Table table = new StubTable(latest, Map.of(3L, v3, 5L, v5));
+  void enumerateSnapshotsWalksUnselectedMetadataVersionsForUnmappedIdentity() {
+    StructType originalSchema = new StructType().add("id", LongType.LONG, false);
+    StructType evolvedSchema =
+        new StructType().add("id", LongType.LONG, false).add("added", LongType.LONG, true);
+    Snapshot latest = snapshot(5L, 5000L, evolvedSchema);
+    Snapshot v3 = snapshot(3L, 3000L, originalSchema);
+    Snapshot v4 = snapshot(4L, 4000L, evolvedSchema);
+    Table table = new StubTable(latest, Map.of(3L, v3, 4L, v4, 5L, latest));
 
     TestDeltaConnector connector = new TestDeltaConnector(table);
+    connector.setMetadataHistory(DeltaConnector.MetadataHistory.complete(List.of(4L)));
 
     List<FloecatConnector.SnapshotBundle> bundles =
         connector.enumerateSnapshots(
@@ -148,12 +159,112 @@ class DeltaConnectorTest {
             ResourceId.getDefaultInstance(),
             FloecatConnector.SnapshotEnumerationOptions.fullExplicit(true, Set.of(3L, 5L)));
 
-    List<Long> snapshotIds =
-        bundles.stream()
-            .map(FloecatConnector.SnapshotBundle::snapshotId)
-            .collect(Collectors.toList());
+    assertEquals(List.of(3L, 5L), bundles.stream().map(bundle -> bundle.snapshotId()).toList());
+    assertEquals(
+        bundles.getFirst().columnIdentityMap().getEntries(0).getColumnId(),
+        bundles.getLast().columnIdentityMap().getEntries(0).getColumnId());
+    assertEquals(2L, bundles.getLast().columnIdentityMap().getHighWaterMark());
+    assertEquals(5L, bundles.getLast().columnIdentityMap().getSourceVersion());
+  }
 
-    assertEquals(List.of(3L, 5L), snapshotIds);
+  @Test
+  void currentSelectionWalksIntermediateMetadataVersions() {
+    StructType schema = new StructType().add("id", LongType.LONG, false);
+    StructType intermediateSchema =
+        new StructType().add("id", LongType.LONG, false).add("temporary", LongType.LONG, true);
+    Snapshot v100 = snapshot(100L, 100000L, schema);
+    Snapshot latest = snapshot(103L, 103000L, schema);
+    TestDeltaConnector connector =
+        new TestDeltaConnector(
+            new StubTable(
+                latest,
+                Map.of(
+                    101L, snapshot(101L, 101000L, intermediateSchema),
+                    102L, snapshot(102L, 102000L, schema),
+                    103L, latest)));
+    connector.setMetadataHistory(DeltaConnector.MetadataHistory.complete(List.of(101L, 102L)));
+
+    List<FloecatConnector.SnapshotBundle> bundles =
+        connector.enumerateSnapshots(
+            "ns",
+            "tbl",
+            ResourceId.getDefaultInstance(),
+            new FloecatConnector.SnapshotEnumerationOptions(
+                false,
+                Set.of(100L),
+                Set.of(),
+                FloecatConnector.SnapshotSelectionKind.CURRENT,
+                Set.of(),
+                0,
+                identityMap(v100)));
+
+    assertEquals(List.of(103L), bundles.stream().map(bundle -> bundle.snapshotId()).toList());
+    assertEquals(1L, bundles.getFirst().columnIdentityMap().getEntries(0).getColumnId());
+    assertEquals(2L, bundles.getFirst().columnIdentityMap().getHighWaterMark());
+    assertEquals(103L, bundles.getFirst().columnIdentityMap().getSourceVersion());
+  }
+
+  @Test
+  void unavailableUnmappedHistoryResetsAbovePersistedHighWaterMark() {
+    StructType schema = new StructType().add("id", LongType.LONG, false);
+    Snapshot v100 = snapshot(100L, 100000L, schema);
+    Snapshot latest = snapshot(103L, 103000L, schema);
+    TestDeltaConnector connector =
+        new TestDeltaConnector(
+            new StubTable(latest, Map.of(103L, latest), Map.of(101L, truncatedHistoryAt(103L))));
+    connector.setMetadataHistory(DeltaConnector.MetadataHistory.gap("history-unavailable"));
+
+    List<FloecatConnector.SnapshotBundle> bundles =
+        connector.enumerateSnapshots(
+            "ns",
+            "tbl",
+            ResourceId.getDefaultInstance(),
+            new FloecatConnector.SnapshotEnumerationOptions(
+                false,
+                Set.of(100L),
+                Set.of(),
+                FloecatConnector.SnapshotSelectionKind.CURRENT,
+                Set.of(),
+                0,
+                identityMap(v100)));
+
+    assertEquals(2L, bundles.getFirst().columnIdentityMap().getEntries(0).getColumnId());
+    assertEquals(2L, bundles.getFirst().columnIdentityMap().getHighWaterMark());
+  }
+
+  @Test
+  void fullRescanStartsNewUnmappedGenerationAbovePreviousHighWaterMark() {
+    Snapshot previous =
+        snapshot(
+            40L,
+            40000L,
+            new StructType().add("a", LongType.LONG, true).add("dropped", LongType.LONG, true));
+    Snapshot latest =
+        snapshot(
+            50L,
+            50000L,
+            new StructType().add("a", LongType.LONG, true).add("c", LongType.LONG, true));
+    TestDeltaConnector connector =
+        new TestDeltaConnector(new StubTable(latest, Map.of(50L, latest)));
+
+    List<FloecatConnector.SnapshotBundle> bundles =
+        connector.enumerateSnapshots(
+            "ns",
+            "tbl",
+            ResourceId.getDefaultInstance(),
+            new FloecatConnector.SnapshotEnumerationOptions(
+                true,
+                Set.of(),
+                Set.of(),
+                FloecatConnector.SnapshotSelectionKind.CURRENT,
+                Set.of(),
+                0,
+                identityMap(previous)));
+
+    assertTrue(
+        bundles.getFirst().columnIdentityMap().getEntriesList().stream()
+            .allMatch(entry -> entry.getColumnId() > 2L));
+    assertEquals(4L, bundles.getFirst().columnIdentityMap().getHighWaterMark());
   }
 
   @Test
@@ -235,14 +346,15 @@ class DeltaConnectorTest {
   }
 
   @Test
-  void enumerateSnapshotsReturnsAllUnknownVersionsForIncrementalRuns() {
+  void enumerateSnapshotsReturnsUnknownVersionsAfterIdentityPredecessor() {
     Snapshot latest = snapshot(5L, 5000L);
+    Snapshot versionOne = snapshot(1L, 1000L);
     Table table =
         new StubTable(
             latest,
             Map.of(
                 0L, snapshot(0L, 0L),
-                1L, snapshot(1L, 1000L),
+                1L, versionOne,
                 2L, snapshot(2L, 2000L),
                 3L, snapshot(3L, 3000L),
                 4L, snapshot(4L, 4000L),
@@ -255,19 +367,26 @@ class DeltaConnectorTest {
             "ns",
             "tbl",
             ResourceId.getDefaultInstance(),
-            FloecatConnector.SnapshotEnumerationOptions.incremental(Set.of(1L, 4L)));
+            new FloecatConnector.SnapshotEnumerationOptions(
+                false,
+                Set.of(1L),
+                Set.of(),
+                FloecatConnector.SnapshotSelectionKind.ALL,
+                Set.of(),
+                0,
+                identityMap(versionOne)));
 
     List<Long> snapshotIds =
         bundles.stream()
             .map(FloecatConnector.SnapshotBundle::snapshotId)
             .collect(Collectors.toList());
-    assertEquals(List.of(0L, 2L, 3L, 5L), snapshotIds);
+    assertEquals(List.of(2L, 3L, 4L, 5L), snapshotIds);
 
     List<Long> timestamps =
         bundles.stream()
             .map(FloecatConnector.SnapshotBundle::upstreamCreatedAtMs)
             .collect(Collectors.toList());
-    assertEquals(List.of(0L, 2000L, 3000L, 5000L), timestamps);
+    assertEquals(List.of(2000L, 3000L, 4000L, 5000L), timestamps);
   }
 
   @Test
@@ -472,19 +591,29 @@ class DeltaConnectorTest {
   }
 
   @Test
-  void pageIndexSelectionResolvesStableHashedColumnId() {
+  void snapshotStatsCaptureRefusesToRunWithoutThePersistedIdentityMap() {
+    // Canonical IDs for an unmapped table depend on the whole reconciled version chain, so a map
+    // reconstructed from one snapshot in isolation would disagree with every statistic already
+    // captured. Refusing is the only safe answer; inventing a map is not.
     Snapshot latest = snapshot(7L, 7000L, new StructType().add("id", LongType.LONG, false));
     TestDeltaConnector connector =
         new TestDeltaConnector(new StubTable(latest, Map.of(7L, latest)));
+
+    assertThrows(
+        UnsupportedOperationException.class,
+        () ->
+            connector.captureSnapshotTargetStats(
+                "ns", "tbl", ResourceId.getDefaultInstance(), 7L, Set.of()));
+  }
+
+  @Test
+  void pageIndexSelectionResolvesCanonicalColumnId() {
+    Snapshot latest = snapshot(7L, 7000L, new StructType().add("id", LongType.LONG, false));
+    TestDeltaConnector connector =
+        new TestDeltaConnector(new StubTable(latest, Map.of(7L, latest)));
+    ColumnIdentityMap identityMap = identityMap(latest);
     long stableColumnId =
-        new ai.floedb.floecat.connector.common.resolver.LogicalSchemaMapper()
-            .mapRaw(
-                ai.floedb.floecat.catalog.rpc.ColumnIdAlgorithm.CID_PATH_ORDINAL,
-                ai.floedb.floecat.catalog.rpc.TableFormat.TF_DELTA,
-                TEST_SCHEMA_JSON,
-                Set.of())
-            .getColumns(0)
-            .getId();
+        DeltaCanonicalIdentity.canonicalIdsByStatsKey(latest, identityMap).get("id");
     var entry = pageIndexEntry("s3://bucket/file.parquet", "id");
 
     var selected =
@@ -496,7 +625,7 @@ class DeltaConnectorTest {
                 Set.of("#" + stableColumnId),
                 FloecatConnector.ColumnSelectorPolicy.defaults(),
                 List.of(entry),
-                ColumnIdentityMap.getDefaultInstance())
+                identityMap)
             .orElseThrow();
 
     assertEquals(1, selected.size());
@@ -512,10 +641,62 @@ class DeltaConnectorTest {
                 Set.of(),
                 FloecatConnector.ColumnSelectorPolicy.defaults(),
                 List.of(entry),
-                ColumnIdentityMap.getDefaultInstance())
+                identityMap)
             .orElseThrow();
     assertEquals(
         Set.of("#" + stableColumnId, "id"), selectedByDefault.getFirst().selectorAliases());
+  }
+
+  @Test
+  void pageIndexSelectorsUseTheCurrentIdentityGenerationAcrossModeChange() {
+    String schemaJson =
+        """
+        {"type":"struct","fields":[
+          {"name":"a","type":"long","nullable":false,"metadata":{}},
+          {"name":"b","type":"long","nullable":false,"metadata":{}}
+        ]}
+        """;
+    Snapshot latest =
+        snapshot(
+            7L,
+            7000L,
+            new StructType().add("a", LongType.LONG, false).add("b", LongType.LONG, false));
+    TestDeltaConnector connector =
+        new TestDeltaConnector(new StubTable(latest, Map.of(7L, latest)));
+    connector.setSnapshotSchemaJson(schemaJson);
+    ColumnIdentityMap structured = identityMap(latest);
+    ColumnIdentityMap mapped = nativeIdentityMap(Map.of("a", 2, "b", 1));
+    List<FloecatConnector.ParquetPageIndexEntry> entries =
+        List.of(
+            pageIndexEntry("s3://bucket/file.parquet", "a"),
+            pageIndexEntry("s3://bucket/file.parquet", "b"));
+
+    var before =
+        connector
+            .selectPageIndexEntries(
+                "ns",
+                "tbl",
+                7L,
+                Set.of("#1"),
+                FloecatConnector.ColumnSelectorPolicy.defaults(),
+                entries,
+                structured)
+            .orElseThrow();
+    var after =
+        connector
+            .selectPageIndexEntries(
+                "ns",
+                "tbl",
+                7L,
+                Set.of("#1"),
+                FloecatConnector.ColumnSelectorPolicy.defaults(),
+                entries,
+                mapped)
+            .orElseThrow();
+
+    assertFalse(structured.getFingerprint().equals(mapped.getFingerprint()));
+    assertEquals(List.of("a"), before.stream().map(entry -> entry.columnName()).toList());
+    assertEquals(List.of("b"), after.stream().map(entry -> entry.columnName()).toList());
   }
 
   @Test
@@ -538,19 +719,9 @@ class DeltaConnectorTest {
     TestDeltaConnector connector =
         new TestDeltaConnector(new StubTable(latest, Map.of(8L, latest)));
     connector.setSnapshotSchemaJson(evolvedSchemaJson);
-    var schema =
-        new ai.floedb.floecat.connector.common.resolver.LogicalSchemaMapper()
-            .mapRaw(
-                ai.floedb.floecat.catalog.rpc.ColumnIdAlgorithm.CID_PATH_ORDINAL,
-                ai.floedb.floecat.catalog.rpc.TableFormat.TF_DELTA,
-                evolvedSchemaJson,
-                Set.of());
+    ColumnIdentityMap identityMap = identityMap(latest);
     long addedColumnId =
-        schema.getColumnsList().stream()
-            .filter(column -> column.getPhysicalPath().equals("added"))
-            .findFirst()
-            .orElseThrow()
-            .getId();
+        DeltaCanonicalIdentity.canonicalIdsByStatsKey(latest, identityMap).get("added");
     String oldFile = "s3://bucket/old.parquet";
     String newFile = "s3://bucket/new.parquet";
 
@@ -566,7 +737,7 @@ class DeltaConnectorTest {
                     pageIndexEntry(oldFile, "id"),
                     pageIndexEntry(newFile, "id"),
                     pageIndexEntry(newFile, "added")),
-                ColumnIdentityMap.getDefaultInstance())
+                identityMap)
             .orElseThrow();
 
     assertEquals(
@@ -593,7 +764,7 @@ class DeltaConnectorTest {
                 Set.of("#" + addedColumnId),
                 FloecatConnector.ColumnSelectorPolicy.defaults(),
                 List.of(pageIndexEntry(oldFile, "id")),
-                ColumnIdentityMap.getDefaultInstance())
+                identityMap)
             .orElseThrow();
     assertEquals(1, schemaOnlyAddition.size());
     assertEquals("added", schemaOnlyAddition.getFirst().columnName());
@@ -610,7 +781,7 @@ class DeltaConnectorTest {
                 Set.of(oldFile),
                 List.of(),
                 List.of(new FloecatConnector.ParquetRowGroup(oldFile, 0, 17)),
-                ColumnIdentityMap.getDefaultInstance())
+                identityMap)
             .orElseThrow();
     assertEquals(1, noDecodedColumns.size());
     assertEquals(17, noDecodedColumns.getFirst().rowCount());
@@ -628,7 +799,10 @@ class DeltaConnectorTest {
               "name": "logical_id",
               "type": "long",
               "nullable": true,
-              "metadata": {"delta.columnMapping.physicalName": "col-123"}
+              "metadata": {
+                "delta.columnMapping.id": 17,
+                "delta.columnMapping.physicalName": "col-123"
+              }
             }
           ]
         }
@@ -641,12 +815,14 @@ class DeltaConnectorTest {
                     LongType.LONG,
                     true,
                     FieldMetadata.builder()
+                        .putLong("delta.columnMapping.id", 17L)
                         .putString(DeltaColumnMapping.PHYSICAL_NAME_KEY, "col-123")
                         .build()));
     Snapshot latest = snapshot(9L, 9000L, mappedSchema);
     TestDeltaConnector connector =
         new TestDeltaConnector(new StubTable(latest, Map.of(9L, latest)));
     connector.setSnapshotSchemaJson(mappedSchemaJson);
+    ColumnIdentityMap identityMap = identityMap(latest);
     var physicalEntry = pageIndexEntry("s3://bucket/mapped.parquet", "col-123");
 
     var selected =
@@ -658,7 +834,7 @@ class DeltaConnectorTest {
                 Set.of("logical_id"),
                 FloecatConnector.ColumnSelectorPolicy.defaults(),
                 List.of(physicalEntry),
-                ColumnIdentityMap.getDefaultInstance())
+                identityMap)
             .orElseThrow();
 
     assertEquals(1, selected.size());
@@ -803,18 +979,42 @@ class DeltaConnectorTest {
 
   private static FloecatConnector.SnapshotBundle snapshotBundle(
       long snapshotId, String schemaJson) {
+    ColumnIdentityMap identityMap =
+        identityMap(snapshot(snapshotId, 0L, new StructType().add("id", LongType.LONG, false)));
     return new FloecatConnector.SnapshotBundle(
-        snapshotId,
-        0L,
-        0L,
-        schemaJson,
-        null,
-        0L,
-        null,
-        Map.of(),
-        0,
-        null,
-        ColumnIdentityMap.getDefaultInstance());
+        snapshotId, 0L, 0L, schemaJson, null, 0L, null, Map.of(), 0, null, identityMap);
+  }
+
+  private static ColumnIdentityMap identityMap(Snapshot snapshot) {
+    return DeltaCanonicalIdentity.reconcile(
+            snapshot,
+            snapshot.getVersion(),
+            ColumnIdentityMap.getDefaultInstance(),
+            HistoryCoverage.COMPLETE_METADATA_HISTORY)
+        .identityMap();
+  }
+
+  private static ColumnIdentityMap nativeIdentityMap(Map<String, Integer> nativeIds) {
+    List<SchemaNode> nodes =
+        nativeIds.entrySet().stream()
+            .sorted(Map.Entry.comparingByKey())
+            .map(
+                entry ->
+                    new SchemaNode(
+                        ColumnPath.ROOT.field(entry.getKey()),
+                        1,
+                        true,
+                        OptionalInt.of(entry.getValue()),
+                        Optional.empty()))
+            .toList();
+    return DeltaCanonicalIdentity.toProto(
+        SchemaIdentityReconciler.reconcile(
+                ResolvedSchema.of(nodes),
+                7L,
+                IdentityMode.NATIVE_FIELD_ID,
+                Optional.empty(),
+                HistoryCoverage.COMPLETE_METADATA_HISTORY)
+            .state());
   }
 
   private static FloecatConnector.ParquetPageIndexEntry pageIndexEntry(
@@ -1014,9 +1214,15 @@ class DeltaConnectorTest {
   }
 
   private static KernelException truncatedHistory() {
+    return truncatedHistoryAt(107800L);
+  }
+
+  private static KernelException truncatedHistoryAt(long earliestVersion) {
     return new KernelException(
         "s3://bucket/table: Cannot load table version 0 as the transaction log has been truncated"
             + " due to manual deletion or the log/checkpoint retention policy. The earliest"
-            + " available version is 107800.");
+            + " available version is "
+            + earliestVersion
+            + ".");
   }
 }
